完成站内信，进度条

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,5 +1,5 @@
 /*门户导航栏*/
-
+@import './core/var';
 .boss-navbar {
     background-color: #fff;
     box-shadow: 0 2px 3px 0 #ccc;
@@ -13,7 +13,7 @@
         text-decoration: none;
 
         &:hover {
-            color: #29cc29;
+            color: $color-green;
         }
     }
 
@@ -142,7 +142,7 @@
                      div {
                         background: #FFF;
                         box-shadow: 0 2px 3px 0 #ccc;
-                        display: none;
+                        // display: none;
                         position: absolute;
                         top: 0;
                         width: 155px;
@@ -193,15 +193,13 @@
                         height: 10px;
                         width: 20px;
                         border-radius: 5px;
-                        background: #29cc29;
+                        background: $color-green;
                         color: #FFF;
                         font-size: 10px;
                         line-height: 10px;
                         top: 8px;
                         left: 20px;
                     }
-
-
                 }
 
                 div {
@@ -228,11 +226,11 @@
                             span {
                                     position: absolute;
                                     display: block;
-                                    background: #29cc29;
+                                    background: $color-green;
                                     width: 6px;
                                     height: 6px;
                                     border-radius: 3px;
-                                    box-shadow: 0 0 5px 0px #29cc29;
+                                    box-shadow: 0 0 5px 0px $color-green;
                                     top: 18px;
                                     left: 30px;
                             }
