--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,10 @@
 @import './mixins/clearfix';
 @import './treeDrop';
 @import './header';
+@import './modaler';
 @import './table';
+@import './stationMail';
+@import './processBar';
 
 // 修复某些 webkit 浏览器中 placeholder 出现偏上现象
 ::-webkit-input-placeholder {
