--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -4,9 +4,17 @@
   margin: 0 auto;
   background: #fff;
   font-weight: 300;
+
+  th {
+    &>div {
+      overflow: inherit !important;
+    }
+  }
 }
 
-
+.table-header {
+  height: 80px;
+}
 .table-header-authority {
   height: 80px;
   line-height: 80px;
@@ -43,4 +51,127 @@
   margin: 20px 30px 20px 0px;
   border-radius: 3px;
   cursor: pointer;
+}
+.el-table {
+  border-color: #EAEAEA;
+  overflow: inherit;
+
+  th{
+    background-color: #FAFAFA;
+    text-align: left;
+    overflow: inherit !important;
+  }
+  td {
+    border-color: #EAEAEA;
+    height: 60px;
+  }
+  .cell {
+    background: inherit;
+    font-weight: 300;
+  }
+
+  .el-table-column--selection {
+    padding-left: 20px;
+  }
+
+  .el-checkbox__inner {
+    width: 14px;
+    height: 14px;
+    border-radius: 2px;
+    border-color: #75839A;
+
+    &:hover,&:focus {
+      border-color: #25c526;
+    }
+
+    &:after {
+      height: 7px;
+      left: 3px;
+      width: 4px;
+      top: 0px;
+    }
+  }
+  .is-checked {
+
+    .el-checkbox__inner {
+      background-color: #25c526;
+      border-color: #25c526;
+    }
+  }
+  .el-table-load-select {
+    position: relative;
+
+    span {
+      cursor: pointer;
+    }
+
+    &>i.fa {
+      color: #525666;
+      margin-left: 6px;
+    }
+
+    .el-autocomplete-label{
+      position: absolute;
+      top: 40px;
+      left: -35px;
+      z-index: 9999;
+    }
+    .el-autocomplete {
+      width: 100%;
+      padding: 10px;
+      box-shadow: 0 0 6px 0 rgba(0,0,0,.2);
+      box-sizing: content-box !important;
+      background-color: #fff !important;
+    }
+    .el-autocomplete-focus {
+      box-shadow: inherit !important;
+    }
+  }
+  .el-input__inner {
+    height: 32px;
+    border-color: #ddd;
+    padding-left: 10px;
+    font-weight: 300;
+
+  }
+}
+.el-table__header-wrapper {
+  overflow: inherit;
+
+  thead {
+    div {
+      background-color: inherit;
+    }
+  }
+}
+.el-autocomplete-suggestion {
+  top: 168px !important;
+  box-shadow: 0 0 6px 0 rgba(0,0,0,.2);
+  padding: 50px 0px 0px;
+  background: #fff;
+
+  div {
+    box-sizing: content-box !important;
+  }
+
+  li {
+    padding-left: 18px;
+    &:hover {
+      background-color: #FAFAFA;
+
+    }
+  }
+  .el-scrollbar__bar.is-vertical {
+  right:10px !important;
+}
+}
+.el-autocomplete-suggestion__wrap {
+  border: none;
+}
+.el-autocomplete-product {
+  width: 236px;
+}
+
+.el-autocomplete-suggestion-product {
+  width: 256px !important;
 }
