--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,8 @@
 @import './treeDrop';
 @import './header';
 @import './table';
+@import './loadSelect';
+@import './datePicker';
 
 // 修复某些 webkit 浏览器中 placeholder 出现偏上现象
 ::-webkit-input-placeholder {
