--- a/src/styles/complexDrop.scss
+++ b/src/styles/complexDrop.scss
@@ -1,308 +1,158 @@
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
+@import './core/var';
+.complexdrop {
 
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-
-
-
-.dropdown-select3 {
+  .complexdrop-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #DDD;
+    border-radius: 4px;
+    outline: none;
+    padding: 10px 12px;
+    color: $color-font-grey;
+    font-family: inherit;
+    font-size: 14px;
+  }
+  .comlexdropWrap{
     position: relative;
-    width: 460px;
+    border: 1px solid #DDD;
+    border-radius: 4px;
+    margin-top: 2px;
+
+    .complexdrop-content {
+      border-bottom: 1px solid #DDD;
+      height: 182px;
+      overflow-y: scroll;
+      padding-left: 12px;
+
+      li {
+        font-size: 0;
+
+        ul {
+          margin-left: 18px;
+        }
+      }
 
 
+      .switch-clild {
+        vertical-align: middle;
 
+        i {
+          font-size: 14px;
+          color: #999;
+          vertical-align: middle;
+        }
+      }
 
-    .open-treeContent {
-        height: 180px;
-    }
-
-    .dropdown-select3-value {
-        display: none;
-    }
-
-    .dropdown-select3-input {
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        font-size: 14px;
-        height: 40px;
-        padding: 10px 12px;
-        position: relative;
-        width: 100%;
-        z-index: 11;
-    }
-
-
-    .dropdown-select3-open {
+      .check-node {
+        border: 1px solid #999;
+        border-radius: 3px;
         background: #FFF;
-        border: 1px solid #ddd;
+        display: inline-block;
+        height: 14px;
+        line-height: 14px;
+        width: 14px;
+        font-size: 0;
+        text-align: center;
+        padding-top: 1px;
+        vertical-align: middle;
+
+        input {
+          display: none;
+        }
+
+        i {
+          font-size: 10px;
+          color: #FFF;
+          display: none;
+          vertical-align: middle;
+        }
+      }
+
+      .checked {
+
+        >.check-node {
+          border-color: $color-green;
+          background: $color-green;
+
+          i {
+            display: inline
+          }
+        }
+      }
+
+
+      .node-name {
+        color: #999;
+        font-size: 14px;
+        padding-left: 6px;
+        vertical-align: middle;
+      }
+
+      .child-node {
+        cursor: pointer;
+        display: inline-block;
+        margin-right: 40px;
+        margin-top: 6px;
+      }
+
+      .parent-node {
+        cursor: pointer;
+        margin-top: 10px;
+      }
+
+
+      .open-clild {
+
+        >.switch-clild {
+          .fa-plus {
+            display: none;
+          }
+
+           .fa-minus {
+            display: inline-block;
+          }
+        }
+
+        >ul {
+          display: block;
+        }
+      }
+
+      .close-clild {
+
+        >a {
+          .fa-plus {
+            display: inline-block;
+          }
+
+          .fa-minus {
+            display: none;
+          }
+        }
+
+        >ul {
+          display: none;
+        }
+      }
+    }
+    .complexdrop-btn {
+      height: 68px;
+      text-align: center;
+      padding: 16px 0;
+
+      button {
+        cursor: pointer;
+        height: 36px;
+        width: 80px;
+        padding: 8px 25px;
+        font-size: 14px;
+        color: #FFF;
+        border: 1px solid $color-green;
         border-radius: 4px;
-        // display: none;
-        position: absolute;
-        top: 42px;
-        width: 100%;
-        z-index: 10;
-
-        li {
-            font-size: 0;
-            line-height: 25px;
-            margin-top: 5px;
-            padding-left: 10px;
-
-            ul {
-                display: none;
-                margin-left: 35px;
-            }
-
-
-
-            a {
-                color: #000;
-                cursor: pointer;
-                display: inline-block;
-                font-size: 16px;
-                height: 18px;
-                line-height: 15px;
-                margin-right: 10px;
-                text-decoration: none;
-
-                .fa-minus {
-                    display: none;
-                }
-
-                .fa-plus {
-                    display: inline-block;
-                }
-            }
-        }
-
-
-        li.open-ul {
-
-            a {
-
-                .fa-minus {
-                    display: inline-block;
-                }
-
-                .fa-plus {
-                    display: none;
-                }
-            }
-
-            >ul {
-                display: block;
-            }
-        }
-
-
-        span {
-            display: inline-block;
-            font-size: 14px;
-            height: 18px;
-            vertical-align: top;
-        }
-
-        .check-name {
-            line-height: 18px;
-            color: #75839a;
-            cursor: pointer;
-            padding-left: 5px;
-        }
-
-        .open-checkbox {
-            width: 18px;
-            cursor: pointer;
-
-            input[type=checkbox] {
-                display: none;
-            }
-
-            span.open-box-wrap {
-                border: 1px solid #75839a;
-                border-radius: 3px;
-                width: 18px;
-            }
-            .fa-check {
-                display: none;
-            }
-        }
-
-
-        .active {
-            >span.open-checkbox{
-                span.open-box-wrap {
-                    background: #29cc29;
-                    border-color: #29cc29;
-                    line-height: 15px;
-                    text-align: center;
-                }
-                .fa-check {
-                    color: #FFF;
-                    display: inline-block;
-                    font-size: 12px;
-                }
-            }
-        }
-
-        .open-top {
-            height: 4px;
-            width: 100px;
-        }
-
-        .open-wrap {
-            list-style: none;
-            margin: 0;
-            max-height: 180px;
-            overflow-y: auto;
-            padding: 0;
-            z-index: 999;
-        }
-
-        .open-bottom {
-            border-top: 1px solid #ddd;
-            padding: 9px 10px;
-            text-align: center;
-            overflow: hidden;
-            height: 68px;
-
-            div {
-                float: left;
-                font-size: 0;
-                margin-top: 11px;
-                display: none;
-
-                span.check-name {
-                    font-size: 14px;
-                }
-            }
-
-            a {
-
-                background: #29cc29;
-                border-radius: 4px;
-                border: 1px solid #29cc29;
-                color: #FFF;
-                display: inline-block;
-                font-size: 14px;
-                height: 36px;
-                outline: none;
-                padding: 8px 25px;
-                text-decoration: none;
-                width: 80px;
-
-                &:hover {
-                    background: #23B323;
-                }
-            }
-        }
-
-
-
-        .closeSearch {
-            color: #000;
-            display: none;
-            font-size: 20px;
-            height: 20px;
-            line-height: 20px;
-            position: absolute;
-            right: 20px;
-            top: 10px;
-            text-decoration: none;
-            text-align: center;
-            width: 20px;
-        }
-
-        .dropdown-select3-loadding {
-            color: #29cc29;
-            display: none;
-            font-size: 40px;
-            height: 40px;
-            left: 150px;
-            position: relative;
-            text-align: center;
-            top: 50px;
-            width: 40px;
-        }
-
-        .dropdown-select3-noOption {
-            color: #75839a;
-            display: none;
-            font-size: 14px;
-            line-height: 100px;
-            text-align: center;
-        }
+        background: $color-green;
+        outline: none;
+        font-family: inherit;
+      }
     }
-
-    .open {
-        display: block;
-    }
-
-
-    .dropdown-select3-checked {
-        margin-right: -60px;
-        position: relative;
-
-        &.hideMore {
-            height: 98px;
-            overflow: hidden;
-        }
-
-        .items {
-            font-size: 0;
-            width: 375px;
-
-            span {
-                background: #e9fae9;
-                border-radius: 3px;
-                color: #29cc29;
-                display: inline-block;
-                font-size: 13px;
-                height: 34px;
-                line-height: 34px;
-                min-width: 110px;
-                margin-right: 15px;
-                margin-top: 15px;
-                padding: 0 15px;
-                position: relative;
-
-                i {
-                    cursor: pointer;
-                    font-size: 12px;
-                    margin-top: -16px;
-                    position: absolute;
-                    padding: 10px;
-                    right: 0;
-                    top: 50%;
-                }
-            }
-        }
-
-
-        a {
-            bottom: 0;
-            cursor: pointer;
-            color: #000;
-            display: inline-block;
-            font-size: 14px;
-            height: 34px;
-            line-height: 34px;
-            position: absolute;
-            right: 0;
-            text-decoration: none;
-            text-align: center;
-            width: 60px;
-            display: none;
-        }
-    }
+  }
 }
-
-
-
