表格模块保存

--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -101,7 +101,7 @@
       border-color: #25c526;
     }
   }
-  .b-table-load-select {
+  .b-table-load-select,.b-table-data-picker {
     position: relative;
 
     span {
