--- a/src/styles/datePicker.scss
+++ b/src/styles/datePicker.scss
@@ -6,5 +6,64 @@
     position: absolute;
     top: 42px;
     left: 0px;
+    opacity: 0;
+    z-index: -999;
+  }
+}
+.b-data-picker-box {
+  top: 169px !important;
+  border-bottom: none;
+
+  .available{
+
+    &.today {
+    color: #29CC29;
+    }
+
+    &:before {
+      display: none;
+    }
+    &.in-range {
+      background-color: #E9FAE9;
+    }
+    &.start-date,&.end-date {
+      background-color: #29CC29 !important;
+    }
+  }
+}
+.b-data-picker {
+  .b-data-picker-clear {
+    position: absolute;
+    background: #fff;
+    border: 1px solid #d1dbe5;
+    border-top: none;
+    top: 322px;
+    width: 520px;
+    height: 44px;
+    box-shadow: 0 2px 6px #ccc;
+  }
+}
+.el-picker-panel__shortcut:nth-child(4){
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  width: 48px;
+  height: 26px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  line-height: 22px;
+  font-size: 12px;
+  color: #999;
+}
+.el-picker-panel__sidebar {
+  background: #FFF;
+
+  .el-picker-panel__shortcut {
+    color: #525666;
+    font-weight: 300;
+
+    &:hover {
+      background: #FAFAFA;
+    }
   }
 }
