--- a/src/styles/datePicker.scss
+++ b/src/styles/datePicker.scss
@@ -8,6 +8,13 @@
     left: 0px;
     opacity: 0;
     z-index: -999;
+    width: 0px;
+    height: 0px;
+
+    input {
+      width: 0px;
+      height: 0px;
+    }
   }
 }
 .b-data-picker-box {
