--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -55,8 +55,13 @@
 .el-table {
   border-color: #EAEAEA;
   overflow: inherit;
+  border-left: none;
 
-  th{
+  &::after {
+    width: 0px;
+  }
+
+  th {
     background-color: #FAFAFA;
     text-align: left;
     overflow: inherit !important;
@@ -135,5 +140,80 @@ td.el-table_1_column_4,
 td.el-table_1_column_5 {
   .cell {
     color: #999;
+  }
+}
+.table-header li {
+    height: 80px;
+    line-height: 80px;
+    margin-left: 20px;
+    float: left;
+    cursor: pointer;
+    color: #525666;
+}
+
+.table-footer {
+  width: 100%;
+  height: 70px;
+  background: #FFF;
+
+  ul {
+    float: right;
+
+    li {
+      float: left;
+      line-height: 70px;
+    }
+
+    a {
+      color: #ccc;
+      padding: 8px 15px;
+    }
+
+    input {
+      width: 30px;
+      height: 30px;
+      text-indent: 9px;
+      outline: none;
+      color: #29CC29;
+      font-size: 14px;
+      border-radius: 4px;
+      border: 1px solid #ddd;
+
+      & {
+        -moz-appearance:textfield;
+      }
+      &::-webkit-inner-spin-button,
+      &::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+    }
+    span {
+      margin-left: 10px;
+      font-size: 14px;
+      letter-spacing: 4px;
+      color: #999;
+    }
+    .table-next {
+      margin-right: 15px;
+    }
+    .table-next:hover, .table-prev:hover {
+      a {
+        color: #25c526;
+      }
+    }
+  }
+}
+
+.table-header-authority {
+  input {
+    font-weight: 300;
+  }
+}
+.el-select-dropdown {
+  .el-select-dropdown__item {
+    span {
+      font-weight: 300;
+    }
   }
 }
