--- a/src/styles/datePicker.scss
+++ b/src/styles/datePicker.scss
@@ -1,24 +1,13 @@
 .b-table-data-picker {
-  position: relative;
-  z-index: 9999;
-
   .el-date-editor {
     position: absolute;
-    top: 42px;
+    width: 84px;
+    bottom: -5px;
     left: 0px;
-    opacity: 0;
-    z-index: -999;
-    width: 0px;
-    height: 0px;
-
-    input {
-      width: 0px;
-      height: 0px;
-    }
+    z-index: -10;
   }
 }
 .b-data-picker-box {
-  top: 169px !important;
   border-bottom: none;
 
   .available{
