--- a/src/styles/crumbs.scss
+++ b/src/styles/crumbs.scss
@@ -2,11 +2,20 @@
 
 .crumbs {
   color: #525666;
-  font-size: 14px;
   line-height: 54px;
 
-  a {
-    text-decoration: none;
-    color: inherit;
+  >span {
+    font-size: 0;
+
+    a {
+      color: inherit;
+      font-size: 14px;
+      text-decoration: none;
+    }
+
+    span {
+      font-size: 14px;
+      margin: 0 5px;
+    }
   }
 }
