--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,10 +9,44 @@
 @import './complexDrop';
 @import './loadSelect';
 @import './datePicker';
-@import './crumbs.scss';
+@import './crumbs';
+@import './plugins';
+@import './pageBottom';
+@import './modaltips';
+@import './newCustom';
+@import './views/customerDetail';
 
+
+  * {
+    box-sizing: border-box !important;
+  }
+  body {
+    background: #ebebeb;
+    font-family: "Microsoft Yahei", "PingFang SC", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  li {
+    list-style-type: none;
+  }
+  h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
+    font-family: "Microsoft Yahei", "PingFang SC", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
 
 // 修复某些 webkit 浏览器中 placeholder 出现偏上现象
 ::-webkit-input-placeholder {
   line-height: normal;
+}
+
+
+.crm-content {
+  border-radius: 4px;
+  background: #FFF;
 }
