--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,7 +14,9 @@
 @import './pageBottom';
 @import './modaltips';
 @import './newCustom';
+@import './pageTurn';
 @import './views/customerDetail';
+@import './views/group';
 
 
   * {
