--- a/src/styles/modaler.scss
+++ b/src/styles/modaler.scss
@@ -145,3 +145,10 @@
   font-size: 14px;
   margin-top: 22px;
 }
+
+.modal-grey-explain {
+  color: #999;
+  font-size: 14px;
+  margin-top: -10px;
+  margin-bottom: 20px;
+}
