--- a/src/styles/newCustom.scss
+++ b/src/styles/newCustom.scss
@@ -47,6 +47,7 @@
         border: 1px solid #ddd;
         border-radius: 4px;
         color:  #525666;
+        font-family: inherit;
         font-size: 14px;
         height: 40px;
         outline: none;
