--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@
 @import './pageBottom';
 @import './modaltips';
 @import './newCustom';
+@import './autocomplete';
 @import './views/customerDetail';
 
 
