--- a/src/styles/views/customerDetail.scss
+++ b/src/styles/views/customerDetail.scss
@@ -306,3 +306,37 @@
     }
   }
 }
+
+.return-custom-modal {
+
+  .check-return-tit {
+    color: #999999;
+    font-size: 14px;
+    margin-bottom: 20px;
+  }
+
+  textarea {
+    font-family: inherit;
+    color: #525666;
+    width: 460px;
+    height: 60px;
+    resize: none;
+    outline: none;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 10px 12px;
+    line-height: 20px;
+
+    &::-webkit-input-placeholder {
+      color: #ccc;
+    }
+    &:-moz-placeholder {
+      color: #ccc;
+    }
+
+    &:-ms-input-placeholder {
+        /* IE10+ */
+      color: #ccc;
+    }
+  }
+}
