--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,6 +31,7 @@
     position: relative;
     overflow-x: hidden;
     overflow-y: auto;
+    -webkit-font-smoothing: antialiased;
   }
   ul {
     list-style: none;
