--- a/src/styles/autocomplete.scss
+++ b/src/styles/autocomplete.scss
@@ -27,3 +27,15 @@
 .el-autocomplete-suggestion {
   box-shadow: 0 0 5px 0 #DDDDDD;
 }
+.el-autocomplete-suggestion__list {
+  li {
+    &:active {
+      background-color: #29cc29 !important;
+      color: #FFF !important;
+    }
+    &:hover {
+      background-color: #FAFAFA ;
+      color: #525666;
+    }
+  }
+}
