--- a/src/styles/select.scss
+++ b/src/styles/select.scss
@@ -14,3 +14,6 @@
 .el-select-dropdown__item.selected.hover, .el-select-dropdown__item.hover, .el-select-dropdown__item:hover {
   background: #FAFAFA;
 }
+.el-input__icon.el-icon-caret-top:hover+input.el-input__inner {
+  border-color: #29cc29;
+}
