--- a/src/styles/newCustom.scss
+++ b/src/styles/newCustom.scss
@@ -102,7 +102,11 @@
       }
     }
   }
-
-
-
+  .new-custom-line {
+    input {
+      &:hover {
+        border-color: #29cc29;
+      }
+    }
+  }
 }
