完成公海池私人池页面所有操作

--- a/src/styles/newCustom.scss
+++ b/src/styles/newCustom.scss
@@ -65,6 +65,10 @@
             /* IE10+ */
           color: #ccc;
         }
+
+        &:focus {
+          border-color: $color-green;
+        }
       }
 
       >input  {
