--- a/src/styles/views/customerDetail.scss
+++ b/src/styles/views/customerDetail.scss
@@ -112,6 +112,7 @@
         padding: 24px 0 22px 0;
 
         button {
+          font-family: inherit;
           border: 1px solid #ddd;
           background: #FFF;
           border-radius: 4px;
@@ -181,6 +182,7 @@
         border-radius: 4px;
         color: #999;
         font-size: 14px;
+        font-family: inherit;
         height: 90px;
         line-height: 22px;
         margin-top: 9px;
@@ -204,6 +206,22 @@
         &:focus {
           border-color: $color-green;
         }
+      }
+
+      .error {
+        textarea {
+
+          border: 1px solid #FF0000;
+        }
+
+        .errortips {
+          font-size: 12px;
+          color: #FF0000;
+        }
+      }
+
+      input {
+        font-family: inherit;
       }
 
       .cd-dynamic-select {
@@ -291,7 +309,6 @@
         span.recordContent {
           span {
             color: #22262A;
-            margin: 0 10px;
           }
         }
 
@@ -317,7 +334,8 @@
 
   textarea {
     font-family: inherit;
-    color: #525666;
+    font-size: 14px;
+    color: #999;
     width: 460px;
     height: 60px;
     resize: none;
